--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "moment": "^2.29.3",
     "mongoose": "^6.3.2",
     "nodemon": "^2.0.16",
+    "pdfkit": "^0.13.0",
+    "pdfmake": "^0.2.5",
     "underscore": "^1.13.3"
   }
 }
